# gmic-android-example

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/gmic/: update250.gmic
app/src/main/cpp/: CMakeLists.txt  gmic.cpp  gmic.h  gmic_cli.cpp  gmic_stdlib.h
app/src/main/java/it/andreafontana/gmic_android_example/: MainActivity.kt
app/src/main/java/it/tonight/gmic_android_example/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
